# Club21OrderFeedProject

./: .gitignore  Dockerfile  README.md  S21_SH_ORDERS_20250821_183344.csv  app.py  docker-compose.yml  last_order.json  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
DOCS/: order graphql
checkpoints/: last_order.json
output/: S21_SH_ORDERS_20250825_150245.csv
shopify/: __init__.py  graphql.py  transform.py  utils.py
shopify/queries/: order_details.gql  orders.gql
